
Tue Dec 21 17:43:06 CET 2004 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.c: access MonoDomain from tls, too.

2004-12-21  Sebastien Pouliot  <sebastien@ximian.com>

	* declsec.c: Removed unused variable (and related warning ;-)

2004-12-21  Ben Maurer  <bmaurer@ximian.com>

	* mini-x86.c (mono_arch_output_basic_block): Just use ecx as the
	register to pop to make this cleaner, at the request of Paolo.

2004-12-20  Ben Maurer  <bmaurer@ximian.com>

	* mini-ops.h (OP_GETHASHCODE): New op.

	* inssel.brg (OP_GETHASHCODE): Emit code for the new opcode

	* mini.c (mini_get_inst_for_method): Create the intrinsic hash
	operation.

	For a microbenchmark, this reduces the cost of Hashtable.get_Item
	by 25%.
	
	* mini-x86.c (mono_arch_output_basic_block): Rather than

	add ebp, 4

	Emit

	pop edx

	The first is 3 bytes while the second is 1. This saves 36 kb on
	mscorlib, quite a big saving. When bootstraping mcs, I was able to
	see a small boost because of icache locality.

	* cfold.c (FOLD_BINOPCOMM): Kill add foo, 0

Mon Dec 20 12:19:40 EST 2004 Paolo Molaro <lupus@ximian.com>

	* Makefile.am, mini-ppc.h, mini-exceptions.c, exceptions-ppc.c:
	started code sharing with the generic code.

Mon Dec 20 11:08:06 EST 2004 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.c, cpu-g4.md: added code for direct access to
	tls data slots.

Mon Dec 20 10:58:28 EST 2004 Paolo Molaro <lupus@ximian.com>

	* mini-ops.h, inssel-x86.brg, cpu-amd64.md, inssel.brg, inssel-amd64.brg,
	 mini-amd64.c, mini-x86.c, cpu-pentium.md: renamed OP_X86_TLS_GET
	to OP_TLS_GET.

2004-12-20  Sebastien Pouliot  <sebastien@ximian.com>

	* declsec.c|h: Added functions to cache the declarative stack modifiers
	in MonoJitInfo and to create a security frame from a MonoJitInfo 
	structure.
	* mini.c: Initialize jinfo->cas_inited to FALSE when MonoJitInfo is
	created. Register internal calls for System.Security.SecurityFrame::
	_GetSecurityFrame and _GetSecurityStack.